implemented order creation logic, buyer registration, initial product inventory, attempted to implement presigned url for image uploads and updated swagger docs
